[package]
name = "ws_server"
version = "0.1.0"
edition = "2024"

[dependencies]

# crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
chacha20 = "0.9"
blake3 = "1"
rand = "0.8"
hex = "0.4"

# runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# server
anyhow = "1"
actix-web = { version = "4.10", default-features = false, features = ["macros"] }
actix-ws = "0.3"
futures = "0.3"
futures-util = "0.3"
serde_json = "1"

[[bin]]
name = "ws_server"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "time"] }
tokio-tungstenite = "0.21"
url = "2"
futures-util = "0.3"

# Size-optimised release for the Pi. panic stays "unwind" (default) so
# actix-web keeps per-request panic isolation — a bad frame must not take
# the whole relay down.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
